--- a/remont-stroy/about-us.html
+++ b/remont-stroy/about-us.html
@@ -1,19 +1,20 @@
 <!doctype html>
 <html lang="ru">
-  <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-  <link rel="icon" type="image/png" href="./img/favicon-96x96.png" sizes="96x96" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20250307082628" />
-  <link rel="stylesheet" href="css/style.min.css?_v=20250307082628" />
-  <title>О компании</title>
+	<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+	<link rel="icon" type="image/png" href="./img/favicon-96x96.png" sizes="96x96" />
+	<link rel="stylesheet" href="https://unpkg.com/beerslider/dist/BeerSlider.css?_v=20250310114408" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20250310114408" />
+	<link rel="stylesheet" href="css/style.min.css?_v=20250310114408" />
+	<title>О компании</title>
 </head>
 
-  <body>
-    <div class="wrapper">
-      <!-- Шапка -->
-      <header id="header" class="header">
+	<body>
+		<div class="wrapper">
+			<!-- Шапка -->
+			<header id="header" class="header">
   <div class="header__container">
     <!-- Верхняя часть -->
     <div class="header__top">
@@ -60,8 +61,6 @@
         </a>
       </div>
       <a href="#" class="header__call-up" aria-label="Вызвать замерщика"> ВЫЗВАТЬ ЗАМЕРЩИКА </a>
-      <!-- Не забудь спросить у чата джипити как сделаешь эту кнопку. -->
-      <!-- Сравника с другими сайтами, особенно со старым -->
       <button id="burger-btn" class="header__burger">
         <span></span>
       </button>
@@ -95,7 +94,7 @@
         </li>
         <li id="misc-btn" class="header__service">Прочие услуги</li>
         <li class="header__service">
-          <a href="#" aria-label="Рассчитать стоимость услуг">Рассчитать стоимость</a>
+          <a href="#" aria-label="Рассчитать стоимость услуг">Рассчитать стоимость онлайн</a>
         </li>
       </ul>
     </div>
@@ -103,79 +102,79 @@
 </header>
 
 
-      <main>
-        <!-- Главный экран -->
-        <section class="head _about-us">
-          <div class="head__container">
-            <h1 class="head__title">О нас</h1>
-            <nav class="head__nav">
-              <ul class="head__menu">
-                <li>
-                  <a href="#" class="head__link">
-                    <div class="head__icon">
-                      <img class="lazy" data-src="img/icon-home.svg" alt="" />
-                    </div>
-                    <span>ГЛАВНАЯ</span>
-                  </a>
-                </li>
-                <li>
-                  <a href="#" class="head__link head__link--active">О НАС</a>
-                </li>
-              </ul>
-            </nav>
-          </div>
-        </section>
+			<main>
+				<!-- Главный экран -->
+				<section class="head _about-us">
+					<div class="head__container">
+						<h1 class="head__title">О нас</h1>
+						<nav class="head__nav">
+							<ul class="head__menu">
+								<li>
+									<a href="#" class="head__link">
+										<div class="head__icon">
+											<img class="lazy" data-src="img/icon-home.svg" alt="" />
+										</div>
+										<span>ГЛАВНАЯ</span>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="head__link head__link--active">О НАС</a>
+								</li>
+							</ul>
+						</nav>
+					</div>
+				</section>
 
-        <!-- О нас -->
-        <section class="company">
-          <div class="company__container">
-            <!-- Левая часть -->
-            <div class="company__body">
-              <div class="company__theme"><img class="lazy" data-src="img/icon-logo.svg" alt="Маленькая иконка логотипа" /><span>О нас</span></div>
-              <h2 class="company__title">Ремонт вашей мечты – быстро, качественно, надежно!</h2>
-              <p class="company__descr">
-                «Ремонт Строй» – команда профессионалов, занимающихся ремонтом квартир в Нижнем Новгороде. Мы предлагаем качественные услуги по доступным ценам, выполняя как отдельные работы, так и
-                полный ремонт «под ключ». Наши специалисты обладают высокой квалификацией в строительстве, дизайне и отделке, гарантируя надежный результат в кратчайшие сроки.
-              </p>
-            </div>
-            <!-- Правая часть -->
-            <div class="company__view">
-              <picture><source data-srcset="img/img-photo.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  class="lazy" data-src="img/img-photo.png" alt="" /></picture>
-              <div class="company__block">
-                <div class="company__icon">
-                  <img class="lazy" data-src="img/icon-company.svg" alt="" />
-                </div>
-                <div class="company__lead">+10 ЛЕТ</div>
-                <div class="company__sub-lead">БИЗНЕС<br />ОПЫТ</div>
-              </div>
-            </div>
-          </div>
-        </section>
+				<!-- О нас -->
+				<section class="company">
+					<div class="company__container">
+						<!-- Левая часть -->
+						<div class="company__body">
+							<div class="company__theme"><img class="lazy" data-src="img/icon-logo.svg" alt="Маленькая иконка логотипа" /><span>О нас</span></div>
+							<h2 class="company__title">Ремонт вашей мечты – быстро, качественно, надежно!</h2>
+							<p class="company__descr">
+								«Ремонт Строй» – команда профессионалов, занимающихся ремонтом квартир в Нижнем Новгороде. Мы предлагаем качественные услуги по доступным ценам, выполняя как отдельные работы, так и
+								полный ремонт «под ключ». Наши специалисты обладают высокой квалификацией в строительстве, дизайне и отделке, гарантируя надежный результат в кратчайшие сроки.
+							</p>
+						</div>
+						<!-- Правая часть -->
+						<div class="company__view">
+							<picture><source data-srcset="img/img-photo.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  class="lazy" data-src="img/img-photo.png" alt="" /></picture>
+							<div class="company__block">
+								<div class="company__icon">
+									<img class="lazy" data-src="img/icon-company.svg" alt="" />
+								</div>
+								<div class="company__lead">+10 ЛЕТ</div>
+								<div class="company__sub-lead">БИЗНЕС<br />ОПЫТ</div>
+							</div>
+						</div>
+					</div>
+				</section>
 
-        <!-- Принципы -->
-        <section class="tenet">
-          <div class="tenet__container">
-            <div class="tenet__theme"><img class="lazy" data-src="img/icon-logo.svg" alt="Маленькая иконка логотипа" /><span>принципы</span></div>
-            <h2 class="tenet__title">Наши ценности</h2>
-            <div class="tenet__items">
-              <div class="tenet__item">
-                <h3 class="tenet__name">Доверие и открытость</h3>
-                <p class="tenet__descr">Мы строим долгосрочные отношения с клиентами, предлагая честные условия сотрудничества.</p>
-              </div>
-              <div class="tenet__item">
-                <h3 class="tenet__name">Ответственность</h3>
-                <p class="tenet__descr">Каждый проект – это наша репутация, поэтому мы подходим к работе с полной самоотдачей.</p>
-              </div>
-              <div class="tenet__item">
-                <h3 class="tenet__name">Профессионализм</h3>
-                <p class="tenet__descr">Мы постоянно совершенствуем свои навыки, изучаем новые технологии и внедряем передовые решения.</p>
-              </div>
-            </div>
-          </div>
-        </section>
+				<!-- Принципы -->
+				<section class="tenet">
+					<div class="tenet__container">
+						<div class="tenet__theme"><img class="lazy" data-src="img/icon-logo.svg" alt="Маленькая иконка логотипа" /><span>принципы</span></div>
+						<h2 class="tenet__title">Наши ценности</h2>
+						<div class="tenet__items">
+							<div class="tenet__item">
+								<h3 class="tenet__name">Доверие и открытость</h3>
+								<p class="tenet__descr">Мы строим долгосрочные отношения с клиентами, предлагая честные условия сотрудничества.</p>
+							</div>
+							<div class="tenet__item">
+								<h3 class="tenet__name">Ответственность</h3>
+								<p class="tenet__descr">Каждый проект – это наша репутация, поэтому мы подходим к работе с полной самоотдачей.</p>
+							</div>
+							<div class="tenet__item">
+								<h3 class="tenet__name">Профессионализм</h3>
+								<p class="tenet__descr">Мы постоянно совершенствуем свои навыки, изучаем новые технологии и внедряем передовые решения.</p>
+							</div>
+						</div>
+					</div>
+				</section>
 
-        <!-- Наши завершенные объекты ремонта -->
-        <section class="completed">
+				<!-- Наши завершенные объекты ремонта -->
+				<section class="completed">
   <div class="completed__container">
     <div class="completed__theme"><img class="lazy" data-src="img/icon-logo.svg" alt="Маленькая иконка логотипа" /><span>наши завершенные объекты ремонта</span></div>
     <h2 class="completed__title">
@@ -189,8 +188,8 @@
 </section>
 
 
-        <!-- Рабочий процесс -->
-        <section class="step">
+				<!-- Рабочий процесс -->
+				<section class="step">
   <div class="step__container">
     <div class="step__theme"><img class="lazy" data-src="img/icon-logo.svg" alt="Маленькая иконка логотипа" /><span>Рабочий процесс</span></div>
     <h2 class="step__title">Как мы работаем</h2>
@@ -213,7 +212,7 @@
           <div class="step__lead">Шаг</div>
         </div>
         <h3 class="step__name">Замер</h3>
-        <p class="step__descr">Создайте заявку на сайте или позвоните нам.</p>
+        <p class="step__descr">Встречаемся на объекте для замера и обсуждения деталей. и ваших пожеланий.</p>
       </div>
       <div class="step__item">
         <div class="step__head">
@@ -221,7 +220,7 @@
           <div class="step__lead">Шаг</div>
         </div>
         <h3 class="step__name">Смета</h3>
-        <p class="step__descr">Создайте заявку на сайте или позвоните нам.</p>
+        <p class="step__descr">Получите готовую смету с полным перечнем работ и их стоимостью.</p>
       </div>
       <div class="step__item">
         <div class="step__head">
@@ -229,7 +228,7 @@
           <div class="step__lead">Шаг</div>
         </div>
         <h3 class="step__name">Договор</h3>
-        <p class="step__descr">Создайте заявку на сайте или позвоните нам.</p>
+        <p class="step__descr">Подписываем договор. Фиксируем сроки, стоимость и гарантии.</p>
       </div>
       <div class="step__item">
         <div class="step__head">
@@ -237,7 +236,7 @@
           <div class="step__lead">Шаг</div>
         </div>
         <h3 class="step__name">Рабочий процесс</h3>
-        <p class="step__descr">Создайте заявку на сайте или позвоните нам.</p>
+        <p class="step__descr">Выполняем работы. Согласовываем возникающие вопросы.</p>
       </div>
       <div class="step__item">
         <div class="step__head">
@@ -245,7 +244,7 @@
           <div class="step__lead">Шаг</div>
         </div>
         <h3 class="step__name">Снабжение</h3>
-        <p class="step__descr">Создайте заявку на сайте или позвоните нам.</p>
+        <p class="step__descr">Доставка, разгрузка, подъем всех необходимых материалов.</p>
       </div>
       <div class="step__item">
         <div class="step__head">
@@ -253,7 +252,7 @@
           <div class="step__lead">Шаг</div>
         </div>
         <h3 class="step__name">Контроль</h3>
-        <p class="step__descr">Создайте заявку на сайте или позвоните нам.</p>
+        <p class="step__descr">Контролируем каждый этап выполнения работ. квалифицированным специалистом.</p>
       </div>
       <div class="step__item">
         <div class="step__head">
@@ -261,15 +260,15 @@
           <div class="step__lead">Шаг</div>
         </div>
         <h3 class="step__name">Завершающий этап</h3>
-        <p class="step__descr">Создайте заявку на сайте или позвоните нам.</p>
+        <p class="step__descr">Вы получаете готовую квартиру, принимаете все выполненные работы и после подписания актов оплачиваете.</p>
       </div>
     </div>
   </div>
 </section>
 
 
-        <!-- Оплата -->
-        <section class="pay-met">
+				<!-- Оплата -->
+				<section class="pay-met">
   <div class="pay-met__container">
     <div class="pay-met__theme"><img class="lazy" data-src="img/icon-logo.svg" alt="Маленькая иконка логотипа" /><span>оплата</span></div>
     <h2 class="pay-met__title">Способы оплаты</h2>
@@ -307,8 +306,8 @@
 </section>
 
 
-        <!-- Наши преимущества -->
-        <div class="our-advan">
+				<!-- Наши преимущества -->
+				<div class="our-advan">
   <div class="our-advan__container">
     <div class="our-advan__theme"><img class="lazy" data-src="img/icon-logo.svg" alt="Маленькая иконка логотипа" /><span>НАШИ ПРЕИМУЩЕСТВА</span></div>
     <h2 class="our-advan__title">Преимущества работы с нами</h2>
@@ -359,10 +358,10 @@
   </div>
 </div>
 
-      </main>
+			</main>
 
-      <!-- Подвал -->
-      <footer class="footer">
+			<!-- Подвал -->
+			<footer class="footer">
   <div class="footer__container">
     <!-- Верхняя часть -->
     <div class="footer__wrapper">
@@ -712,7 +711,9 @@
 </div>
 
 
-    </div>
-    <script src="js/app.min.js?_v=20250307082628"></script>
-  </body>
+		</div>
+		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js?_v=20250310114408"></script>
+		<script src="https://unpkg.com/beerslider/dist/BeerSlider.js?_v=20250310114408"></script>
+		<script src="js/app.min.js?_v=20250310114408"></script>
+	</body>
 </html>
