--- a/remont-stroy/payment.html
+++ b/remont-stroy/payment.html
@@ -1,19 +1,20 @@
 <!doctype html>
 <html lang="ru">
-  <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-  <link rel="icon" type="image/png" href="./img/favicon-96x96.png" sizes="96x96" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20250307082628" />
-  <link rel="stylesheet" href="css/style.min.css?_v=20250307082628" />
-  <title>Способы оплаты</title>
+	<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+	<link rel="icon" type="image/png" href="./img/favicon-96x96.png" sizes="96x96" />
+	<link rel="stylesheet" href="https://unpkg.com/beerslider/dist/BeerSlider.css?_v=20250310114408" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20250310114408" />
+	<link rel="stylesheet" href="css/style.min.css?_v=20250310114408" />
+	<title>Способы оплаты</title>
 </head>
 
-  <body>
-    <div class="wrapper">
-      <!-- Шапка -->
-      <header id="header" class="header">
+	<body>
+		<div class="wrapper">
+			<!-- Шапка -->
+			<header id="header" class="header">
   <div class="header__container">
     <!-- Верхняя часть -->
     <div class="header__top">
@@ -60,8 +61,6 @@
         </a>
       </div>
       <a href="#" class="header__call-up" aria-label="Вызвать замерщика"> ВЫЗВАТЬ ЗАМЕРЩИКА </a>
-      <!-- Не забудь спросить у чата джипити как сделаешь эту кнопку. -->
-      <!-- Сравника с другими сайтами, особенно со старым -->
       <button id="burger-btn" class="header__burger">
         <span></span>
       </button>
@@ -95,69 +94,69 @@
         </li>
         <li id="misc-btn" class="header__service">Прочие услуги</li>
         <li class="header__service">
-          <a href="#" aria-label="Рассчитать стоимость услуг">Рассчитать стоимость</a>
+          <a href="#" aria-label="Рассчитать стоимость услуг">Рассчитать стоимость онлайн</a>
         </li>
       </ul>
     </div>
   </div>
 </header>
 
-      <!-- Шапка -->
+			<!-- Шапка -->
 
-      <main>
-        <!-- Главный экран -->
-        <section class="head">
-          <div class="head__container">
-            <h1 class="head__title">Способы оплаты</h1>
-            <nav class="head__nav">
-              <ul class="head__menu">
-                <li>
-                  <a href="#" class="head__link">
-                    <div class="head__icon">
-                      <img class="lazy" data-src="img/icon-home.svg" alt="" />
-                    </div>
-                    <span>ГЛАВНАЯ</span>
-                  </a>
-                </li>
-                <li>
-                  <a href="#" class="head__link head__link--active">Способы оплаты</a>
-                </li>
-              </ul>
-            </nav>
-          </div>
-        </section>
+			<main>
+				<!-- Главный экран -->
+				<section class="head">
+					<div class="head__container">
+						<h1 class="head__title">Способы оплаты</h1>
+						<nav class="head__nav">
+							<ul class="head__menu">
+								<li>
+									<a href="#" class="head__link">
+										<div class="head__icon">
+											<img class="lazy" data-src="img/icon-home.svg" alt="" />
+										</div>
+										<span>ГЛАВНАЯ</span>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="head__link head__link--active">Способы оплаты</a>
+								</li>
+							</ul>
+						</nav>
+					</div>
+				</section>
 
-        <!-- Способы оплаты -->
-        <section class="payment">
-          <div class="payment__container">
-            <div class="payment__theme"><img class="lazy" data-src="img/icon-logo.svg" alt="Маленькая иконка логотипа" /><span>оплата</span></div>
-            <h2 class="payment__title">Банковской картой</h2>
-            <p class="payment__descr">
-              Вы можете легко оплатить наши услуги с помощью банковской карты через терминал в офисе. Мы принимаем Visa, MasterCard, Maestro и Мир. Если вы хотите оплатить ремонт картой, пожалуйста,
-              сообщите нам об этом заранее.
-            </p>
-            <div class="payment__items">
-              <div class="payment__item">
-                <h3 class="payment__lead">Переводом с расчетного счета</h3>
-                <p class="payment__text">
-                  Вы можете легко оплатить наши услуги с помощью банковской карты через терминал в офисе. Мы принимаем Visa, MasterCard, Maestro и Мир. Если вы хотите оплатить ремонт картой,
-                  пожалуйста, сообщите нам об этом заранее.
-                </p>
-              </div>
-              <div class="payment__item">
-                <h3 class="payment__lead">Наличными</h3>
-                <p class="payment__text">Оплата наличными принимается в нашем офисе. После оплаты вы получите кассовый и электронный чек.</p>
-              </div>
-              <div class="payment__item">
-                <h3 class="payment__lead">Рассрочка</h3>
-                <p class="payment__text">Мы предоставляем возможность оформить рассрочку через банк-партнер.</p>
-              </div>
-            </div>
-          </div>
-        </section>
+				<!-- Способы оплаты -->
+				<section class="payment">
+					<div class="payment__container">
+						<div class="payment__theme"><img class="lazy" data-src="img/icon-logo.svg" alt="Маленькая иконка логотипа" /><span>оплата</span></div>
+						<h2 class="payment__title">Банковской картой</h2>
+						<p class="payment__descr">
+							Вы можете легко оплатить наши услуги с помощью банковской карты через терминал в офисе. Мы принимаем Visa, MasterCard, Maestro и Мир. Если вы хотите оплатить ремонт картой, пожалуйста,
+							сообщите нам об этом заранее.
+						</p>
+						<div class="payment__items">
+							<div class="payment__item">
+								<h3 class="payment__lead">Переводом с расчетного счета</h3>
+								<p class="payment__text">
+									Вы можете легко оплатить наши услуги с помощью банковской карты через терминал в офисе. Мы принимаем Visa, MasterCard, Maestro и Мир. Если вы хотите оплатить ремонт картой,
+									пожалуйста, сообщите нам об этом заранее.
+								</p>
+							</div>
+							<div class="payment__item">
+								<h3 class="payment__lead">Наличными</h3>
+								<p class="payment__text">Оплата наличными принимается в нашем офисе. После оплаты вы получите кассовый и электронный чек.</p>
+							</div>
+							<div class="payment__item">
+								<h3 class="payment__lead">Рассрочка</h3>
+								<p class="payment__text">Мы предоставляем возможность оформить рассрочку через банк-партнер.</p>
+							</div>
+						</div>
+					</div>
+				</section>
 
-        <!-- Обратная связь -->
-        <section class="feedback">
+				<!-- Обратная связь -->
+				<section class="feedback">
   <div class="feedback__container">
     <div class="feedback__body">
       <!-- Информационная часть  -->
@@ -225,8 +224,8 @@
 </section>
 
 
-        <!-- Клиенты -->
-        <div class="pl-up">
+				<!-- Клиенты -->
+				<div class="pl-up">
   <picture><source data-srcset="img/placheholder-up.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  class="lazy" data-src="img/placheholder-up.png" alt="" /></picture>
 </div>
 <section class="clients">
@@ -246,7 +245,7 @@
     <!-- Рейтнг -->
     <div class="clients__ratings">
       <div class="clients__item">
-        <picture><source data-srcset="img/icon-flag.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  class="clients__icon" class="lazy" data-src="img/icon-flag.png" alt="Флажок рейтинга" /></picture>
+        <picture><source data-srcset="img/icon-flag.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  class="clients__icon lazy" data-src="img/icon-flag.png" alt="Флажок рейтинга" /></picture>
         <div class="clients__text">
           <p class="clients__lead">Рейтинг на <span>Я</span>ндексе на основе ремонтов</p>
           <div class="clients__starts">
@@ -255,7 +254,7 @@
         </div>
       </div>
       <div class="clients__item">
-        <picture><source data-srcset="img/icon-flag-google.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  class="clients__icon" class="lazy" data-src="img/icon-flag-google.png" alt="Флажок рейтинга" /></picture>
+        <picture><source data-srcset="img/icon-flag-google.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  class="clients__icon lazy" data-src="img/icon-flag-google.png" alt="Флажок рейтинга" /></picture>
         <div class="clients__text">
           <p class="clients__lead">Рейтинг на <span>G</span><span>o</span><span>o</span><span>g</span><span>l</span><span>e</span> на основе ремонтов</p>
           <div class="clients__starts">
@@ -270,10 +269,10 @@
   <picture><source srcset="img/placheholder-down.webp" type="image/webp"><img src="img/placheholder-down.png" alt="" /></picture>
 </div>
 
-      </main>
+			</main>
 
-      <!-- Подвал -->
-      <footer class="footer">
+			<!-- Подвал -->
+			<footer class="footer">
   <div class="footer__container">
     <!-- Верхняя часть -->
     <div class="footer__wrapper">
@@ -623,7 +622,9 @@
 </div>
 
 
-    </div>
-    <script src="js/app.min.js?_v=20250307082628"></script>
-  </body>
+		</div>
+		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js?_v=20250310114408"></script>
+		<script src="https://unpkg.com/beerslider/dist/BeerSlider.js?_v=20250310114408"></script>
+		<script src="js/app.min.js?_v=20250310114408"></script>
+	</body>
 </html>
