--- a/remont-stroy/vacancy.html
+++ b/remont-stroy/vacancy.html
@@ -1,19 +1,20 @@
 <!doctype html>
 <html lang="ru">
-  <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-  <link rel="icon" type="image/png" href="./img/favicon-96x96.png" sizes="96x96" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20250307082628" />
-  <link rel="stylesheet" href="css/style.min.css?_v=20250307082628" />
-  <title>Вакансии</title>
+	<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+	<link rel="icon" type="image/png" href="./img/favicon-96x96.png" sizes="96x96" />
+	<link rel="stylesheet" href="https://unpkg.com/beerslider/dist/BeerSlider.css?_v=20250310114408" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20250310114408" />
+	<link rel="stylesheet" href="css/style.min.css?_v=20250310114408" />
+	<title>Вакансии</title>
 </head>
 
-  <body>
-    <div class="wrapper">
-      <!-- Шапка -->
-      <header id="header" class="header">
+	<body>
+		<div class="wrapper">
+			<!-- Шапка -->
+			<header id="header" class="header">
   <div class="header__container">
     <!-- Верхняя часть -->
     <div class="header__top">
@@ -60,8 +61,6 @@
         </a>
       </div>
       <a href="#" class="header__call-up" aria-label="Вызвать замерщика"> ВЫЗВАТЬ ЗАМЕРЩИКА </a>
-      <!-- Не забудь спросить у чата джипити как сделаешь эту кнопку. -->
-      <!-- Сравника с другими сайтами, особенно со старым -->
       <button id="burger-btn" class="header__burger">
         <span></span>
       </button>
@@ -95,130 +94,130 @@
         </li>
         <li id="misc-btn" class="header__service">Прочие услуги</li>
         <li class="header__service">
-          <a href="#" aria-label="Рассчитать стоимость услуг">Рассчитать стоимость</a>
+          <a href="#" aria-label="Рассчитать стоимость услуг">Рассчитать стоимость онлайн</a>
         </li>
       </ul>
     </div>
   </div>
 </header>
 
-      <!-- Шапка -->
+			<!-- Шапка -->
 
-      <main>
-        <!-- Главный экран -->
-        <section class="head">
-          <div class="head__container">
-            <h1 class="head__title">Вакансии</h1>
-            <nav class="head__nav">
-              <ul class="head__menu">
-                <li>
-                  <a href="#" class="head__link">
-                    <div class="head__icon">
-                      <img class="lazy" data-src="img/icon-home.svg" alt="" />
-                    </div>
-                    <span>ГЛАВНАЯ</span>
-                  </a>
-                </li>
-                <li>
-                  <a href="#" class="head__link head__link--active">Вакансии</a>
-                </li>
-              </ul>
-            </nav>
-          </div>
-        </section>
+			<main>
+				<!-- Главный экран -->
+				<section class="head">
+					<div class="head__container">
+						<h1 class="head__title">Вакансии</h1>
+						<nav class="head__nav">
+							<ul class="head__menu">
+								<li>
+									<a href="#" class="head__link">
+										<div class="head__icon">
+											<img class="lazy" data-src="img/icon-home.svg" alt="" />
+										</div>
+										<span>ГЛАВНАЯ</span>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="head__link head__link--active">Вакансии</a>
+								</li>
+							</ul>
+						</nav>
+					</div>
+				</section>
 
-        <!-- Сотрудничество -->
-        <section class="cooperation">
-          <div class="cooperation__container">
-            <!-- Информационная часть -->
-            <div class="cooperation__info">
-              <div class="cooperation__theme"><img class="lazy" data-src="img/icon-logo.svg" alt="Маленькая иконка логотипа" /><span>Сотрудничество</span></div>
-              <h2 class="cooperation__title">Вакансии</h2>
-              <p class="cooperation__descr">
-                Компания «Центр Отделки» всегда в поиске профессиональных сотрудников которые готовы показать свой уровень на деле, а с нашей стороны отличные условия по доходу и множество других
-                плюсов. Пишите или звоните нам, на данный момент требуются такие сотрудники:
-              </p>
-            </div>
-            <!-- Вакансии -->
-            <div class="cooperation__items">
-              <div class="cooperation__item">
-                <h3 class="cooperation__work">Мастер отделочных работ</h3>
-                <div class="cooperation__wrap">
-                  <h4 class="cooperation__sub-title">Обязанности:</h4>
-                  <ul class="cooperation__list">
-                    <li>чистовая отделка (косметический ремонт)</li>
-                    <li>черновые отделочные работы</li>
-                    <li>плиточные работы</li>
-                    <li>малярные работы</li>
-                    <li>демонтажные работы</li>
-                    <li>сантехнические</li>
-                    <li>электромонтажные</li>
-                    <li>монтаж конструкций из ГКЛ</li>
-                  </ul>
-                </div>
-                <div class="cooperation__wrap">
-                  <h4 class="cooperation__sub-title">Требования:</h4>
-                  <ul class="cooperation__list">
-                    <li>аккуратность</li>
-                    <li>умение работать на результат</li>
-                    <li>ответственность</li>
-                    <li>опыт более 3-х лет</li>
-                  </ul>
-                </div>
-                <div class="cooperation__wrap">
-                  <h4 class="cooperation__sub-title">Условия:</h4>
-                  <ul class="cooperation__list">
-                    <li>Удобный график работы</li>
-                    <li>Выплаты без задержек</li>
-                    <li>Удобный график работы</li>
-                    <li>Бесплатное оплачиваемое обучение</li>
-                    <li>Работа в округе проживания</li>
-                    <li>Постоянное обеспечение объектами вне зависимости от сезона</li>
-                  </ul>
-                </div>
-              </div>
-              <div class="cooperation__item">
-                <h3 class="cooperation__work">Мастер отделочных работ</h3>
-                <div class="cooperation__wrap">
-                  <h4 class="cooperation__sub-title">Обязанности:</h4>
-                  <ul class="cooperation__list">
-                    <li>чистовая отделка (косметический ремонт)</li>
-                    <li>черновые отделочные работы</li>
-                    <li>плиточные работы</li>
-                    <li>малярные работы</li>
-                    <li>демонтажные работы</li>
-                    <li>сантехнические</li>
-                    <li>электромонтажные</li>
-                    <li>монтаж конструкций из ГКЛ</li>
-                  </ul>
-                </div>
-                <div class="cooperation__wrap">
-                  <h4 class="cooperation__sub-title">Требования:</h4>
-                  <ul class="cooperation__list">
-                    <li>аккуратность</li>
-                    <li>умение работать на результат</li>
-                    <li>ответственность</li>
-                    <li>опыт более 3-х лет</li>
-                  </ul>
-                </div>
-                <div class="cooperation__wrap">
-                  <h4 class="cooperation__sub-title">Условия:</h4>
-                  <ul class="cooperation__list">
-                    <li>Удобный график работы</li>
-                    <li>Выплаты без задержек</li>
-                    <li>Удобный график работы</li>
-                    <li>Бесплатное оплачиваемое обучение</li>
-                    <li>Работа в округе проживания</li>
-                    <li>Постоянное обеспечение объектами вне зависимости от сезона</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
+				<!-- Сотрудничество -->
+				<section class="cooperation">
+					<div class="cooperation__container">
+						<!-- Информационная часть -->
+						<div class="cooperation__info">
+							<div class="cooperation__theme"><img class="lazy" data-src="img/icon-logo.svg" alt="Маленькая иконка логотипа" /><span>Сотрудничество</span></div>
+							<h2 class="cooperation__title">Вакансии</h2>
+							<p class="cooperation__descr">
+								Компания «Центр Отделки» всегда в поиске профессиональных сотрудников которые готовы показать свой уровень на деле, а с нашей стороны отличные условия по доходу и множество других
+								плюсов. Пишите или звоните нам, на данный момент требуются такие сотрудники:
+							</p>
+						</div>
+						<!-- Вакансии -->
+						<div class="cooperation__items">
+							<div class="cooperation__item">
+								<h3 class="cooperation__work">Мастер отделочных работ</h3>
+								<div class="cooperation__wrap">
+									<h4 class="cooperation__sub-title">Обязанности:</h4>
+									<ul class="cooperation__list">
+										<li>чистовая отделка (косметический ремонт)</li>
+										<li>черновые отделочные работы</li>
+										<li>плиточные работы</li>
+										<li>малярные работы</li>
+										<li>демонтажные работы</li>
+										<li>сантехнические</li>
+										<li>электромонтажные</li>
+										<li>монтаж конструкций из ГКЛ</li>
+									</ul>
+								</div>
+								<div class="cooperation__wrap">
+									<h4 class="cooperation__sub-title">Требования:</h4>
+									<ul class="cooperation__list">
+										<li>аккуратность</li>
+										<li>умение работать на результат</li>
+										<li>ответственность</li>
+										<li>опыт более 3-х лет</li>
+									</ul>
+								</div>
+								<div class="cooperation__wrap">
+									<h4 class="cooperation__sub-title">Условия:</h4>
+									<ul class="cooperation__list">
+										<li>Удобный график работы</li>
+										<li>Выплаты без задержек</li>
+										<li>Удобный график работы</li>
+										<li>Бесплатное оплачиваемое обучение</li>
+										<li>Работа в округе проживания</li>
+										<li>Постоянное обеспечение объектами вне зависимости от сезона</li>
+									</ul>
+								</div>
+							</div>
+							<div class="cooperation__item">
+								<h3 class="cooperation__work">Мастер отделочных работ</h3>
+								<div class="cooperation__wrap">
+									<h4 class="cooperation__sub-title">Обязанности:</h4>
+									<ul class="cooperation__list">
+										<li>чистовая отделка (косметический ремонт)</li>
+										<li>черновые отделочные работы</li>
+										<li>плиточные работы</li>
+										<li>малярные работы</li>
+										<li>демонтажные работы</li>
+										<li>сантехнические</li>
+										<li>электромонтажные</li>
+										<li>монтаж конструкций из ГКЛ</li>
+									</ul>
+								</div>
+								<div class="cooperation__wrap">
+									<h4 class="cooperation__sub-title">Требования:</h4>
+									<ul class="cooperation__list">
+										<li>аккуратность</li>
+										<li>умение работать на результат</li>
+										<li>ответственность</li>
+										<li>опыт более 3-х лет</li>
+									</ul>
+								</div>
+								<div class="cooperation__wrap">
+									<h4 class="cooperation__sub-title">Условия:</h4>
+									<ul class="cooperation__list">
+										<li>Удобный график работы</li>
+										<li>Выплаты без задержек</li>
+										<li>Удобный график работы</li>
+										<li>Бесплатное оплачиваемое обучение</li>
+										<li>Работа в округе проживания</li>
+										<li>Постоянное обеспечение объектами вне зависимости от сезона</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
 
-        <!-- Обратная связь -->
-        <section class="feedback">
+				<!-- Обратная связь -->
+				<section class="feedback">
   <div class="feedback__container">
     <div class="feedback__body">
       <!-- Информационная часть  -->
@@ -285,10 +284,10 @@
   </div>
 </section>
 
-      </main>
+			</main>
 
-      <!-- Подвал -->
-      <footer class="footer">
+			<!-- Подвал -->
+			<footer class="footer">
   <div class="footer__container">
     <!-- Верхняя часть -->
     <div class="footer__wrapper">
@@ -638,7 +637,9 @@
 </div>
 
 
-    </div>
-    <script src="js/app.min.js?_v=20250307082628"></script>
-  </body>
+		</div>
+		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js?_v=20250310114408"></script>
+		<script src="https://unpkg.com/beerslider/dist/BeerSlider.js?_v=20250310114408"></script>
+		<script src="js/app.min.js?_v=20250310114408"></script>
+	</body>
 </html>
