--- a/remont-stroy/politics.html
+++ b/remont-stroy/politics.html
@@ -1,20 +1,21 @@
 <!doctype html>
 <html lang="ru">
-  <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-  <link rel="icon" type="image/png" href="./img/favicon-96x96.png" sizes="96x96" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20250307082628" />
-  <link rel="stylesheet" href="css/style.min.css?_v=20250307082628" />
-  <title>Политика конфиденциальности</title>
+	<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+	<link rel="icon" type="image/png" href="./img/favicon-96x96.png" sizes="96x96" />
+	<link rel="stylesheet" href="https://unpkg.com/beerslider/dist/BeerSlider.css?_v=20250310114408" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20250310114408" />
+	<link rel="stylesheet" href="css/style.min.css?_v=20250310114408" />
+	<title>Политика конфиденциальности</title>
 </head>
 
 
-  <body>
-    <div class="wrapper">
-      <!-- Шапка -->
-      <header id="header" class="header">
+	<body>
+		<div class="wrapper">
+			<!-- Шапка -->
+			<header id="header" class="header">
   <div class="header__container">
     <!-- Верхняя часть -->
     <div class="header__top">
@@ -61,8 +62,6 @@
         </a>
       </div>
       <a href="#" class="header__call-up" aria-label="Вызвать замерщика"> ВЫЗВАТЬ ЗАМЕРЩИКА </a>
-      <!-- Не забудь спросить у чата джипити как сделаешь эту кнопку. -->
-      <!-- Сравника с другими сайтами, особенно со старым -->
       <button id="burger-btn" class="header__burger">
         <span></span>
       </button>
@@ -96,79 +95,79 @@
         </li>
         <li id="misc-btn" class="header__service">Прочие услуги</li>
         <li class="header__service">
-          <a href="#" aria-label="Рассчитать стоимость услуг">Рассчитать стоимость</a>
+          <a href="#" aria-label="Рассчитать стоимость услуг">Рассчитать стоимость онлайн</a>
         </li>
       </ul>
     </div>
   </div>
 </header>
 
-      <main>
-        <!-- Главный экран -->
-        <section class="head">
-          <div class="head__container">
-            <h1 class="head__title">Политика конфиденциальности</h1>
-            <nav class="head__nav">
-              <ul class="head__menu">
-                <li>
-                  <a href="#" class="head__link">
-                    <div class="head__icon">
-                      <img class="lazy" data-src="img/icon-home.svg" alt="" />
-                    </div>
-                    <span>ГЛАВНАЯ</span>
-                  </a>
-                </li>
-                <li>
-                  <a href="#" class="head__link head__link--active">Политика конфиденциальности</a>
-                </li>
-              </ul>
-            </nav>
-          </div>
-        </section>
+			<main>
+				<!-- Главный экран -->
+				<section class="head">
+					<div class="head__container">
+						<h1 class="head__title">Политика конфиденциальности</h1>
+						<nav class="head__nav">
+							<ul class="head__menu">
+								<li>
+									<a href="#" class="head__link">
+										<div class="head__icon">
+											<img class="lazy" data-src="img/icon-home.svg" alt="" />
+										</div>
+										<span>ГЛАВНАЯ</span>
+									</a>
+								</li>
+								<li>
+									<a href="#" class="head__link head__link--active">Политика конфиденциальности</a>
+								</li>
+							</ul>
+						</nav>
+					</div>
+				</section>
 
-        <!-- Политика конфиденциальности -->
-        <section class="politics">
-          <div class="politics__container">
-            <h2 class="politics__title">Политика в отношении обработки персональных данных</h2>
-            <div class="politics__items">
-              <div class="politics__item">
-                <h3 class="politics__name">1. Общие положения</h3>
-                <p class="politics__descr">
-                  1.1. Оператор ставит своей важнейшей целью соблюдение прав и свобод человека и гражданина при обработке его персональных данных, включая защиту права на неприкосновенность частной
-                  жизни, личную и семейную тайну. <br />
-                  1.2. Настоящая Политика применяется ко всей информации, которую Оператор может получить о посетителях веб-сайта [адрес сайта].
-                </p>
-              </div>
-              <div class="politics__item">
-                <h3 class="politics__name">2. Общие положения</h3>
-                <p class="politics__descr">
-                  1.1. Оператор ставит своей важнейшей целью соблюдение прав и свобод человека и гражданина при обработке его персональных данных, включая защиту права на неприкосновенность частной
-                  жизни, личную и семейную тайну. <br />
-                  1.2. Настоящая Политика применяется ко всей информации, которую Оператор может получить о посетителях веб-сайта [адрес сайта].
-                </p>
-              </div>
-              <div class="politics__item">
-                <h3 class="politics__name">3. Общие положения</h3>
-                <p class="politics__descr">
-                  1.1. Оператор ставит своей важнейшей целью соблюдение прав и свобод человека и гражданина при обработке его персональных данных, включая защиту права на неприкосновенность частной
-                  жизни, личную и семейную тайну. <br />
-                  1.2. Настоящая Политика применяется ко всей информации, которую Оператор может получить о посетителях веб-сайта [адрес сайта].
-                </p>
-              </div>
-              <div class="politics__item">
-                <h3 class="politics__name">4. Общие положения</h3>
-                <p class="politics__descr">
-                  1.1. Оператор ставит своей важнейшей целью соблюдение прав и свобод человека и гражданина при обработке его персональных данных, включая защиту права на неприкосновенность частной
-                  жизни, личную и семейную тайну. <br />
-                  1.2. Настоящая Политика применяется ко всей информации, которую Оператор может получить о посетителях веб-сайта [адрес сайта].
-                </p>
-              </div>
-            </div>
-          </div>
-        </section>
-      </main>
-      <!-- Подвал -->
-      <footer class="footer">
+				<!-- Политика конфиденциальности -->
+				<section class="politics">
+					<div class="politics__container">
+						<h2 class="politics__title">Политика в отношении обработки персональных данных</h2>
+						<div class="politics__items">
+							<div class="politics__item">
+								<h3 class="politics__name">1. Общие положения</h3>
+								<p class="politics__descr">
+									1.1. Оператор ставит своей важнейшей целью соблюдение прав и свобод человека и гражданина при обработке его персональных данных, включая защиту права на неприкосновенность частной
+									жизни, личную и семейную тайну. <br />
+									1.2. Настоящая Политика применяется ко всей информации, которую Оператор может получить о посетителях веб-сайта [адрес сайта].
+								</p>
+							</div>
+							<div class="politics__item">
+								<h3 class="politics__name">2. Общие положения</h3>
+								<p class="politics__descr">
+									1.1. Оператор ставит своей важнейшей целью соблюдение прав и свобод человека и гражданина при обработке его персональных данных, включая защиту права на неприкосновенность частной
+									жизни, личную и семейную тайну. <br />
+									1.2. Настоящая Политика применяется ко всей информации, которую Оператор может получить о посетителях веб-сайта [адрес сайта].
+								</p>
+							</div>
+							<div class="politics__item">
+								<h3 class="politics__name">3. Общие положения</h3>
+								<p class="politics__descr">
+									1.1. Оператор ставит своей важнейшей целью соблюдение прав и свобод человека и гражданина при обработке его персональных данных, включая защиту права на неприкосновенность частной
+									жизни, личную и семейную тайну. <br />
+									1.2. Настоящая Политика применяется ко всей информации, которую Оператор может получить о посетителях веб-сайта [адрес сайта].
+								</p>
+							</div>
+							<div class="politics__item">
+								<h3 class="politics__name">4. Общие положения</h3>
+								<p class="politics__descr">
+									1.1. Оператор ставит своей важнейшей целью соблюдение прав и свобод человека и гражданина при обработке его персональных данных, включая защиту права на неприкосновенность частной
+									жизни, личную и семейную тайну. <br />
+									1.2. Настоящая Политика применяется ко всей информации, которую Оператор может получить о посетителях веб-сайта [адрес сайта].
+								</p>
+							</div>
+						</div>
+					</div>
+				</section>
+			</main>
+			<!-- Подвал -->
+			<footer class="footer">
   <div class="footer__container">
     <!-- Верхняя часть -->
     <div class="footer__wrapper">
@@ -518,7 +517,9 @@
 </div>
 
 
-    </div>
-    <script src="js/app.min.js?_v=20250307082628"></script>
-  </body>
+		</div>
+		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js?_v=20250310114408"></script>
+		<script src="https://unpkg.com/beerslider/dist/BeerSlider.js?_v=20250310114408"></script>
+		<script src="js/app.min.js?_v=20250310114408"></script>
+	</body>
 </html>
